--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "eslint-config-raine",
   "description": "Raine's personal eslint configuration",
+  "keywords": [
+    "eslint",
+    "eslintconfig"
+  ],
   "version": "0.0.0",
   "author": {
     "name": "Raine Revere",
