--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   },
   "license": "ISC",
   "peerDependencies": {
-    "eslint": ">=7"
+    "eslint": ">=7",
+    "eslint-plugin-fp": ">=2.3.0",
+    "eslint-plugin-import": ">=2.22.1",
+    "eslint-plugin-jsdoc": ">=30.7.7",
+    "eslint-plugin-node": ">=11.1.0",
+    "eslint-plugin-promise": ">=4.2.1",
+    "eslint-plugin-standard": ">=4.0.2"
   }
 }
