--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "url": "https://github.com/raineorshine"
   },
   "license": "ISC",
+  "scripts": {
+    "build": "node build.js"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.20"
+  },
   "peerDependencies": {
     "eslint": ">=7",
     "eslint-plugin-fp": ">=2.3.0",
