--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "peerDependencies": {
     "eslint": ">=7",
+    "eslint-config-standard": ">=16.0.1",
     "eslint-plugin-fp": ">=2.3.0",
     "eslint-plugin-import": ">=2.22.1",
     "eslint-plugin-jsdoc": ">=30.7.7",
