--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-plugin-fp": ">=2.3.0",
     "eslint-plugin-import": ">=2.22.1",
     "eslint-plugin-jsdoc": ">=32.3.0",
-    "eslint-plugin-node": ">=11.1.0",
+    "eslint-plugin-n": ">=11.1.0",
     "eslint-plugin-promise": ">=4.3.1"
   }
 }
